--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
   --weight-regular: 400;
   /* Size */
   --size-border-radius: 4px;
+  /* Animation */
+  --animation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -145,4 +147,71 @@ p {
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-radius);
+}
+
+/* Section common */
+.section {
+  text-align: center;
+  padding: 50px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+
+.major__icon {
+  width: 170px;
+  height: 170px;
+  font-size: 70px;
+  color: var(--color-blue);
+  line-height: 170px;
+  margin: auto;
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 16px;
+}
+
+.major__icon i {
+  transition: all var(--animation-duration) ease;
+}
+
+.major__icon:hover i {
+  color: var(--color-night);
+  transform: rotate(-30deg) scale(1.1);
+}
+
+.major__title,
+.major__description {
+  color: var(--color-dark-grey);
+}
+
+.major__description {
+  font-size: var(--font-small);
+}
+
+.academy {
+  display: flex;
+  align-items: center;
+}
+
+.academy__description {
+  margin: 0 16px;
+  text-align: left;
+}
+
+.academy__name,
+.academy__period {
+  color: var(--color-light-grey);
+}
+
+.academy__name {
+  font-size: var(--font-small);
+}
+
+.academy__period {
+  font-size: var(--font-micro);
 }
